shopping/src/main/java/org/example/shopping/_core/errors/exception/Exception500.java
package org.example.shopping._core.errors.exception;

/**
 * 500 Internal Server Error
 */
public class Exception500 extends RuntimeException {
    public Exception500(String msg) {
        super(msg);
    }


}
